--- a/dialog_box_delect_msg/src/App.css
+++ b/dialog_box_delect_msg/src/App.css
@@ -1,14 +1,36 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
   text-align: center;
 }
 
-.Alert {
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  width: 400px;
-  height: 200px;
-  border: 2px solid black
+.Header {
+  margin-bottom: 30px;
 }
+
+.Alert {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 320px;
+  height: 200px;
+  margin: 0;
+  border: 1px solid black;
+  padding: 16px;
+}
+
+button {
+  display: flex;
+  align-items: center;
+  background-color: red;
+  color: white;
+  border: 1px solid brown;
+  width: 100px;
+  height: 20px;
+  padding: 10px;
+}
+
+
 
